# pdm-build-skills

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/pdm_build_bub/: __init__.py  backend.py  config.py  fetcher.py
src/pdm_build_skills/: __init__.py  backend.py  config.py  fetcher.py
tests/: conftest.py  test_backend.py  test_config.py  test_fetcher.py
